[package]
name = "rusty_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde_json = "1.0"
magic-crypt = "3.1.5"
crdts = "7.1.0"
chrono = "0.4.22"

[dev-dependencies]
proptest = "1.0.0"
serial_test = "0.9.0"